# sparta2

./: db.sqlite3  pyproject.toml
.github/workflows/: cy.yml
sparta/: settings.py  urls.py
tabom/apis/v1/: like_router.py
tabom/apis/v1/schemas/: like_request.py
tabom/migrations/: 0001_initial.py  0002_like_unique_user_article.py  0003_article_like_count.py
tabom/models/: article.py
tabom/services/: article_service.py  like_service.py  test_article_service.py
tabom/tests/: test_article_service.py  test_auto_now.py  test_cascade.py  test_like_service.py
tabom/tests/services/: test_article_service.py  test_like_service.py
