[tool.poetry]
name = "django_simhwa"
version = "0.1.0"
description = ""
authors = ["김현두 <bbb6045@naver.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.0"
django-ninja = "0.16.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
